--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   <HEAD>
     <TITLE>
       Hello World
-    <TITLE>
-  <HEAD>
+    </TITLE>
+  </HEAD>
   <BODY>
-    <H1>Hello World<H1>
-  <BODY>
-<HTML>
+    <H1>Hello World</H1>
+  </BODY>
+</HTML>
